This is my second commit (Colomn change time,delete) -20160121

--- a/assets/css/booking-form.css
+++ b/assets/css/booking-form.css
@@ -1,4 +1,4 @@
-/* Frontend CSS Stylesheet for Restaurant Reservations */
+/* Frontend CSS Stylesheet for Table Bookings */
 
 .wtb-booking-form fieldset {
 	padding-bottom: 1em;
