--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,4 @@
-/* CSS Stylesheet for the admin interface for Restaurant Reservations */
+/* CSS Stylesheet for the admin interface for Table Bookings */
 
 .clearfix:before,
 .clearfix:after { /* thanks bootstrap */
